# fastapi-curso-em

./: .gitignore  LICENSE  README.md  pyproject.toml
fast_zero/: app.py  schemas.py
tests/: conftest.py  test_app.py
