[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio-Neves",email = "antoniocalheirosneves@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
]

[tool.poetry]
packages = [{include = "fast_zero"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
